2003-06-11  H.J. Lu <hongjiu.lu@intel.com>

	* po/Make-in (DESTDIR): New.
	(install-data-yes): Support $(DESTDIR).
	(uninstall): Likewise.

2003-06-11  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2003-06-10  Doug Evans  <dje@sebabeach.org>

	* cgen.c (gas_cgen_finish_insn): CGEN_INSN_RELAX renamed to
	CGEN_INSN_RELAXED.
	* config/tc-fr30.c (md_estimate_size_before_relax): Ditto.
	* config/tc-m32r.c (md_estimate_size_before_relax): Ditto.
	* config/tc-openrisc.c (md_estimate_size_before_relax): Ditto.

2003-06-10  Alan Modra  <amodra@bigpond.net.au>
	    Gary Hade <garyhade@us.ibm.com>

	* config/tc-ppc.c (md_assemble): Handle PPC_OPERAND_DQ.
	(md_apply_fix3): Special case lq insn.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-h8300.c (get_rtsl_operands): Accept unbracketed register
	lists.  Allow single-register ranges.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-h8300.c (h8300sxnmode): New.
	(md_pseudo_table): Add .h8300sxn entry.

2003-06-09  H.J. Lu <hongjiu.lu@intel.com>

	* NEWS: Updated for the new -n option for the i386 assembler.

	* config/tc-i386.c (optimize_align_code): New.
	(md_shortopts): Add 'n'.
	(md_parse_option): Handle 'n'.
	(md_show_usage): Add '-n'.

	* config/tc-i386.h (optimize_align_code): Declared.
	(md_do_align): Optimize code alignment only if optimize_align_code
	is not 0.

	* doc/as.texinfo: Add the new -n option.

	* doc/c-i386.texi: Document the new -n option.

2003-06-07  Richard Henderson  <rth@redhat.com>

	* doc/as.texinfo: Document .cfi_rel_offset.

	* dw2gencfi.c (struct cfa_save_data, cfa_save_stack): New.
	(cfi_add_CFA_offset): Detect invalid offsets.
	(cfi_add_CFA_remember_state): Save cur_cfa_offset.
	(cfi_add_CFA_restore_state): Restore it.
	(CFI_rel_offset): New.
	(cfi_pseudo_table): Add it.
	(dot_cfi): Handle it.

2003-06-07  H.J. Lu <hongjiu.lu@intel.com>
